--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ gunicorn = "*"
 whitenoise = "*"
 django-crispy-forms = "*"
 pillow = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.8"
