--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ whitenoise = "*"
 django-crispy-forms = "*"
 pillow = "*"
 django-heroku = "*"
+boto3 = "*"
+django-storages = "*"
 
 [requires]
 python_version = "3.8"
