--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Mac
-.DS_Store
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -139,3 +136,9 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# VSCode
+.vscode
+
+# Custom
+poetry.lock
